--- a/style.css
+++ b/style.css
@@ -1,165 +1,208 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
 
-body{
-    background: #080808;
-    color: white;
+body {
+  background: #080808;
+  color: white;
 }
 
-#header{
-    width: 100%;
-    height: 100vh;
-    /* background-image: url(Images/background.png); */
-    background-image: url(Images/laptop.avif);
-    background-image: linear-gradient(rgba(70, 60, 60, 0.5), rgba(65, 56, 56, 0.5)), url("Images/laptop.avif");
-    background-size: cover;
-    background-position: center;
-    /* opacity: 0.3; */
+#header {
+  width: 100%;
+  height: 100vh;
+  /* background-image: url(Images/background.png); */
+  background-image: url(Images/laptop.avif);
+  background-image: linear-gradient(
+      rgba(70, 60, 60, 0.5),
+      rgba(65, 56, 56, 0.5)
+    ),
+    url("Images/laptop.avif");
+  background-size: cover;
+  background-position: center;
+  /* opacity: 0.3; */
 }
 
-.container{
-    
-    padding: 10px 10%;
-    
+.container {
+  padding: 10px 10%;
 }
 
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.logo{
-    width: 140px;
+.logo {
+  width: 140px;
 }
 
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 10px 20px;
 }
 
-nav ul li a{
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    position: relative;
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  position: relative;
 }
 
-nav ul li a::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #ff004f;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.3s;
+nav ul li a::after {
+  content: "";
+  width: 0;
+  height: 3px;
+  background: #ff004f;
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.3s;
 }
 
-nav ul li a:hover::after{
-    width: 100%;
+nav ul li a:hover::after {
+  width: 100%;
 }
 
-.header-text{
-    margin-top: 20%;
-    font-size: 30px;
+.header-text {
+  margin-top: 20%;
+  font-size: 30px;
 }
 
-.header-text h1{
-    font-size: 60px;
-    margin-top: 20px;
+.header-text h1 {
+  font-size: 60px;
+  margin-top: 20px;
 }
 
-.header-text h1 span{
-    color: #ff004f;}
+.header-text h1 span {
+  color: #ff004f;
+}
 
 /* about */
 
-#about{
-    padding: 80px 0;
-    color: #ababab;
+#about {
+  padding: 80px 0;
+  color: #ababab;
 }
-.row{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.about-col-1{
-    flex-basis: 35%;
-
-
+.row {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.about-col-1 img{
-    width: 100%;
-    border-radius: 15px;
+.about-col-1 {
+  flex-basis: 35%;
 }
 
-.about-col-2{
-    flex-basis: 60%;
+.about-col-1 img {
+  width: 100%;
+  border-radius: 15px;
 }
 
-.sub-title{
-    font-size: 60px;
-    font-weight: 600;
-    color: white;
+.about-col-2 {
+  flex-basis: 60%;
 }
 
-.tab-titles{
-    display: flex;
-    margin: 20px 0 40px;
+.sub-title {
+  font-size: 60px;
+  font-weight: 600;
+  color: white;
 }
 
-.tab-links{
-    margin-right: 50px;
-    font-size: 18px;
+.tab-titles {
+  display: flex;
+  margin: 20px 0 40px;
+}
+
+.tab-links {
+  margin-right: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+}
+
+.tab-links::after {
+  content: "";
+  width: 0;
+  height: 3px;
+  background: #ff004f;
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  transition: 0.3s;
+}
+
+.tab-links.active-link::after {
+  width: 50%;
+}
+
+.tab-contents ul li {
+  list-style: none;
+  margin: 10px 20px;
+}
+
+.tab-contents ul li span {
+  color: #b54769;
+  font-size: 14px;
+}
+
+.tab-contents {
+  display: none;
+}
+
+.tab-contents.active-tab {
+  display: block;
+}
+
+/* skills */
+
+#skills {
+  padding: 30px 30px;
+  
+}
+
+.skills-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.skills-list h2{
+    margin-top: 10px;
+}
+
+.skills-list div{
+    background: #262626;
+    padding: 40px;
+    font-size: 30px;
     font-weight: 500;
-    cursor: pointer;
-    position: relative;
+    border-right: 10px;
+    transition: background 0.5s, transform 0.5s;
 }
 
-.tab-links::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #ff004f;
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: 0.3s;
-
+.skills-list div a{
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+    font-weight: 500;
+    margin-top: 20px;
+    display: inline-block;
 }
 
 
-
-.tab-links.active-link::after{
-    width: 50%;
+.btn:hover{
+  border: 2px solid red;
 }
 
-.tab-contents ul li{
-    
-    list-style: none;
-    margin: 10px 20px;
+.skills-list div:hover{
+    /* background: #ff004f; */
+    transform: translateY(-10px );
 
-}
-
-.tab-contents ul li span{
-    color: #b54769;
-    font-size: 14px;
-}
-
-.tab-contents{
-    display: none;
-}
-
-.tab-contents.active-tab{
-    display: block;
 }
