--- a/phone.css
+++ b/phone.css
@@ -1,4 +1,4 @@
-nav .fas{
+nav .fa-solid{
     display: none;
 }
 
@@ -12,7 +12,7 @@ nav .fas{
         font-size: 30px;
 
     }
-    nav .fas{
+    nav .fa-solid{
         display: block;
         font-size: 25px;
     }
@@ -20,20 +20,23 @@ nav .fas{
         background: #ff004f;
         position: fixed;
         top: 0;
-        right: 0;
+        right: -200px;
         width: 200px;
         height: 100vh;
         padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
     }
     nav ul li{
         display: block;
         margin: 25px;
     }
-    nav ul .fas{
+    nav ul .fa-solid{
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;
     }
+
 }
 
