--- a/style.css
+++ b/style.css
@@ -225,9 +225,9 @@ nav ul li a:hover::after {
 
 /* my work */
 
-#myWork{
+/* #myWork{
   padding: 50px 0;
-}
+} */
 
 .work-list{
   display: grid;
