--- a/style.css
+++ b/style.css
@@ -45,10 +45,15 @@ nav {
   width: 140px;
 }
 
+.navbar{
+ 
+}
 nav ul li {
   display: inline-block;
   list-style: none;
   margin: 10px 20px;
+  /* position: fixed; */
+ /* background-color: rebeccapurple; */
 }
 
 nav ul li a {
@@ -172,14 +177,16 @@ nav ul li a:hover::after {
 
 .skills-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 40px;
-  margin-top: 50px;
+  grid-template-columns: repeat(3, minmax(100px, 1fr));
+  grid-template-rows: 240px;
+
+  grid-gap: 20px;
+  margin-top: 20px;
   text-align: center;
 }
 
 .skills-list h2 {
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 .skills-list div {
@@ -187,9 +194,9 @@ nav ul li a:hover::after {
   flex-direction: column;
   background: #262626;
   padding: 40px;
-  font-size: 30px;
-  font-weight: 500;
-  border-right: 10px;
+  /* font-size: 30px; */
+  /* font-weight: 500; */
+  /* border-right: 10px; */
   transition: background 0.5s, transform 0.5s;
   align-items: center;
   border-radius: 20px;
@@ -198,14 +205,14 @@ nav ul li a:hover::after {
 .skills-list div a {
   text-decoration: none;
   color: white;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 500;
-  margin-top: 20px;
+  margin-top: 10px;
   display: inline-block;
 }
 
 .skills-list img{
-  width: 70%;
+  width: 50%;
   
 
 }
@@ -225,13 +232,14 @@ nav ul li a:hover::after {
 
 /* my work */
 
-/* #myWork{
+#myWork{
   padding: 50px 0;
-} */
+}
 
 .work-list{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+ grid-template-rows: 350px;
   grid-gap: 40px;
   margin-top: 50px;
   justify-content: center;
@@ -287,8 +295,8 @@ nav ul li a:hover::after {
   line-height: 60px;
   background-color: white;
   border-radius: 30px;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   text-align: center;
 
 }
